# CortX

./: .gitignore  DEV_README.md  LICENSE  PRD.md  README.md  TODO.md  prompts.md  summary.md
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
frontend/: .gitignore  Cargo.toml  README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/crates/cortx-core/: Cargo.toml
frontend/crates/cortx-core/src/: command_builder.rs  error.rs  file_watcher.rs  help_parser.rs  lib.rs  models.rs  port_detector.rs  process_manager.rs  runtime_state.rs  script_discovery.rs  shell_init.rs  shim.rs  storage.rs  tool_discovery.rs
frontend/crates/cortx-mcp/: Cargo.toml
frontend/crates/cortx-mcp/src/: main.rs  mcp_emitter.rs  params.rs  process_state.rs  server.rs
frontend/crates/cortx-tui/: Cargo.toml
frontend/crates/cortx-tui/src/: app.rs  cli_error.rs  docs.md  event.rs  input.rs  main.rs  os_open.rs  tui_emitter.rs  util.rs
frontend/crates/cortx-tui/src/ui/: alias_info.rs  aliases_list.rs  app_info.rs  apps_list.rs  help.rs  mod.rs  output.rs  param_form.rs  project_detail.rs  project_info.rs  projects_list.rs  script_info.rs  scripts_list.rs  search.rs  status_bar.rs  tab_bar.rs  tag_filter.rs  theme.rs  tool_info.rs  tools_list.rs
frontend/scripts/: build-sidecar.sh  bump-version.sh
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  process_manager.rs  storage.rs  tauri_emitter.rs
frontend/src-tauri/windows/: hooks.nsh  path-fragment.wxs
frontend/src/components/: ClosingModal.tsx  UpdateChecker.tsx
frontend/src/components/aliases/: AliasCard.tsx  AliasCardView.tsx  AliasCompactItem.tsx  AliasDetail.tsx  AliasForm.tsx  AliasesView.tsx
frontend/src/components/apps/: AppCard.tsx  AppCardView.tsx  AppCompactItem.tsx  AppDetail.tsx  AppForm.tsx  AppsView.tsx
frontend/src/components/command-palette/: CommandPalette.tsx  buildActions.ts  buildEntities.ts  searchFilter.ts  shortcuts.ts  types.ts  useCommandPaletteShortcut.ts
frontend/src/components/env/: AddEnvFileDialog.tsx  EnvComparisonBanner.tsx  EnvFileCard.tsx  EnvVariableRow.tsx  EnvironmentTab.tsx  index.ts
frontend/src/components/global-scripts/: ExecutionHistory.tsx  FolderManager.tsx  GlobalScriptCard.tsx  GlobalScriptCardView.tsx  GlobalScriptCompactItem.tsx  GlobalScriptDetail.tsx  GlobalScriptForm.tsx  GlobalScriptsView.tsx  ParameterEditor.tsx  PresetEditor.tsx  RunScriptDialog.tsx  TagDefinitionManager.tsx
frontend/src/components/layout/: AppSidebar.tsx  MacosTrafficLights.tsx  TerminalPanel.tsx  TitleBar.tsx  index.ts
frontend/src/components/layout/terminal-dnd/: SortableTerminalTab.tsx  TabDragOverlay.tsx  TerminalDndContext.tsx  index.ts  types.ts
frontend/src/components/projects/: ProjectCard.tsx  ProjectCompactItem.tsx  ProjectForm.tsx  ProjectListItem.tsx  ServiceForm.tsx  ServiceItem.tsx  index.ts
frontend/src/components/scripts/: ScriptForm.tsx  ScriptItem.tsx  ScriptsTab.tsx  index.ts
frontend/src/components/settings/: HotkeyInput.tsx  StatusDefinitionManager.tsx
frontend/src/components/tools/: ToolCard.tsx  ToolCardView.tsx  ToolCompactItem.tsx  ToolDetail.tsx  ToolForm.tsx  ToolsView.tsx
frontend/src/components/ui/: StatusBadge.tsx  TagBadge.tsx  TruncatedText.tsx  combobox-input.tsx  command.tsx  dialog.tsx  progress.tsx  sidebar.tsx  view-mode-toggle.tsx
frontend/src/lib/: tauri.ts  utils.ts
frontend/src/stores/: appStore.ts  viewPrefsStore.ts
frontend/src/types/: index.ts
frontend/src/views/: Dashboard.tsx  ProjectView.tsx  Settings.tsx  index.ts
plans/: TUI_and_scripts.md  tools_integration.md
