[package]
name = "cortx-app"
version.workspace = true
description = "Cortx - A dashboard for managing local dev applications"
authors = ["ALXS-GitHub"]
license = ""
repository = ""
edition.workspace = true
rust-version.workspace = true

[lib]
name = "cortx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
cortx-core = { path = "../crates/cortx-core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-fs = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2.4"
