[package]
name = "cortx-core"
version.workspace = true
description = "CortX shared core library - models, storage, and process management"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
parking_lot = "0.12"
thiserror = "2.0"
walkdir = "2.4"
log = "0.4"
fs2 = "0.4"
regex = "1"
notify = "7"
notify-debouncer-mini = "0.5"
# Cross-platform OS-level listening-port lookup by PID (#12)
netstat2 = "0.11"
sysinfo = "0.32"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# Read persisted User/Machine PATH from the registry without spawning a process
# (avoids the PowerShell window flash + UI freeze on the Settings page).
winreg = "0.52"

[dev-dependencies]
tempfile = "3"
